# octadocs

./: Makefile  README.md  logo.drawio  mkdocs.yml  pyproject.toml  setup.cfg
docs/: context.json  header.md  index.md  octa.n3
docs/decisions/: 001-cache.md
docs/octavo/: great-a-tuin.md  index.md
docs/rdfs/: categories.n3  class.md  class_to_class.md  comment.md  container.md  container_membership.md  containers.md  datatype.md  domain.md  domain_and_range.md  entities.md  index.md  inference.md  is_subproperty_of.md  isdefinedby.md  label.md  literal.md  member.md  property_to_property.md  range.md  resource.md  resource_to_resource.md  seealso.md  subclass_of.md  textual_descriptions.md
docs/templates/: term.md
docs/zet/: local-protocol.md  yaml-ld.md
mkdocs_meta/: __init__.py  conversions.py  macros.py  plugin.py
octadocs/: conversions.py  environment.py  macros.py  navigation.py  plugin.py  stored_query.py
octadocs/navigation/: nav_as_pages.py  processor.py  types.py
octadocs/octiron/: context.py  context_loaders.py  octiron.py  yaml_extensions.py
octiron/: __init__.py  octiron.py  types.py
octiron/plugins/: base.py  markdown.py  turtle.py
overrides/: gallery.html  term.html
templates/: main.html  term.html
tests/: test_expand.py  test_jsonld_base_uri_scheme.py  test_jsonld_graph_statement.py  test_jsonld_included_section.py  test_n3_base_no_slash_after_colon.py
tests/test_experiments/: test_clear_default.py  test_clear_named.py  test_expand.py  test_jsonld_base_uri_scheme.py  test_jsonld_compact_uris.py  test_jsonld_included.py  (+4 more)
(+20 files in other folders)
